2000-09-27  Lars Wirzenius  <liw@iki.fi>

	* gw/wtp_state-decl.h: Removed handling of event RcvInvoke in
	state RESULT_RESP_WAIT, since that was neither in the spec and
	seems to do nothing useful.

2000-09-27  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c, gw/wapbox.c, doc/userguide/newconf.txt: Added
	configuration variable http-proxy-exceptions.

2000-09-27  Tuomas Luttinen  <tuo@wapit.com>

	* configure[.in]: Support for libxml1 removed, only 2.2.0 and
	up now.

2000-09-27  Richard Braakman  <dark@wapit.com>

	* gw/smsc_emi.c: Correct calculation of message length for
	UDH messages.

2000-09-27  Lars Wirzenius  <liw@iki.fi>

	* gw/wapbox.c: moved http-proxy-host and http-proxy-port into
	"core" from "wapbox" section. (That's where they were for the
	smsbox as well.) Also added the code that actually makes use
	of the proxy support, by calling http_use_proxy.
	
	* gwlib/http.c: Allow the list of exceptions to be NULL, to
	simplify the case when no exceptions are wanted. Also report
	when a proxy is being used.

2000-09-27  Richard Braakman  <dark@wapit.com>

	* gw/wsp.c: Encode all known content types, not just the
	most common ones.

	* gw/wsp-strings.def: s/applicatoin/application in one of
	the content types.

2000-09-26  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Added Via header to HTTP requests.
	
    	* gwlib/socket.[ch]: Wrote function get_official_name.

	* gwlib/octstr.c: Don't call gwlib_assert_init, instead assert
	that octstr itself has been initialized. This is necessary because
	socket.c now needs to use octet strings before gwlib has been
	fully initialized.

2000-09-26  Richard Braakman  <dark@wapit.com>

	* Making release 0.11.2.

2000-09-26  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox_req.c: smsbox used to dump core if the sendsms
	username was incorrect, now it correctly returned authorization
	failure. Fixes bug report 105 from Paul Keogh.

2000-09-26  Lars Wirzenius  <liw@iki.fi>
